Trying to fix the titles

--- a/dataframes_and_visualisations.ipynb
+++ b/dataframes_and_visualisations.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 319,
    "id": "187da98d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 361,
    "id": "0b0140e5",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 362,
    "id": "9cf8f586",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 363,
    "id": "d07d7313",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 364,
    "id": "678aaef8",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 365,
    "id": "ed593f3d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 366,
    "id": "0f705766",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 367,
    "id": "c6bdc54c",
    "metadata": {
     "scrolled": false
@@ -210,7 +210,7 @@
        "[773 rows x 2 columns]"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 368,
    "id": "ecb93898",
    "metadata": {
     "scrolled": true
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 369,
    "id": "83d22e83",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 370,
    "id": "07a273bb",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 371,
    "id": "626c6a8c",
    "metadata": {
     "scrolled": true
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 372,
    "id": "cf9b41ce",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 373,
    "id": "ba2cb0a9",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 381,
    "id": "1ada6236",
    "metadata": {},
    "outputs": [],
@@ -297,9 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 382,
    "id": "144df294",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -314,10 +316,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (162180345260)>"
+       "<ggplot: (162185880176)>"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,18 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "id": "82557f5c",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 379,
+   "id": "bc2a5b9c",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "C:\\Users\\Amara\\anaconda3\\lib\\site-packages\\plotnine\\ggplot.py:718: PlotnineWarning: Saving 9 x 8 in image.\n",
-      "C:\\Users\\Amara\\anaconda3\\lib\\site-packages\\plotnine\\ggplot.py:719: PlotnineWarning: Filename: C:\\Users\\Amara\\Documents\\GitHub\\DS105_Group_Final_Project\\figures\\plotnine-save-162180345260.pdf\n"
+      "C:\\Users\\Amara\\anaconda3\\lib\\site-packages\\plotnine\\ggplot.py:719: PlotnineWarning: Filename: C:\\Users\\Amara\\Documents\\GitHub\\DS105_Group_Final_Project\\figures\\plotnine-save-162185396544.pdf\n"
      ]
     }
    ],
@@ -349,11 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "id": "c8e6a7b9",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 380,
+   "id": "18ad4fce",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -370,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 342,
    "id": "ebc5493e",
    "metadata": {},
    "outputs": [],
@@ -382,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 338,
    "id": "0fbe5452",
    "metadata": {
     "scrolled": false
@@ -401,10 +399,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (162181072195)>"
+       "<ggplot: (162182490694)>"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6702ad16",
+   "id": "88901db5",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "8a0d5406",
+   "id": "1c6f2fd9",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "114f7bf8",
+   "id": "ea1d2b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3488,7 +3486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e44875d",
+   "id": "d1e9deeb",
    "metadata": {},
    "source": [
     "## Time series for 'Trump' by democrats"
@@ -3497,7 +3495,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "df2eb6f1",
+   "id": "9576dc48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3510,7 +3508,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "a719e632",
+   "id": "1618dd22",
    "metadata": {},
    "outputs": [
     {
@@ -3531,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "3ed8cc38",
+   "id": "f2503661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3543,7 +3541,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "fe692a1b",
+   "id": "5a46d2f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3554,7 +3552,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "88b4a8e5",
+   "id": "5f02da63",
    "metadata": {},
    "outputs": [
     {
@@ -3575,7 +3573,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "be4ac89f",
+   "id": "4a3fee05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3585,7 +3583,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "f35420a3",
+   "id": "27c3b9c6",
    "metadata": {},
    "outputs": [
     {
@@ -3696,7 +3694,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "7d42e675",
+   "id": "81070da1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3706,7 +3704,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "1303dc33",
+   "id": "ce147e57",
    "metadata": {
     "scrolled": true
    },
@@ -3718,7 +3716,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "daa55134",
+   "id": "9ab7203e",
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3834,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "729bb4fd",
+   "id": "772b8235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3849,7 +3847,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "b4094864",
+   "id": "7b757d80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3859,7 +3857,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "d5ef449f",
+   "id": "fb9136b0",
    "metadata": {},
    "outputs": [
     {
@@ -3938,7 +3936,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "c717b606",
+   "id": "a9d041e9",
    "metadata": {
     "scrolled": true
    },
@@ -4346,7 +4344,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "3a29767e",
+   "id": "83dbcda6",
    "metadata": {},
    "outputs": [
     {
@@ -4386,7 +4384,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "5881426c",
+   "id": "2f90c23d",
    "metadata": {},
    "outputs": [
     {
@@ -4426,7 +4424,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "54a9895e",
+   "id": "de8b0b12",
    "metadata": {},
    "outputs": [
     {
@@ -4473,7 +4471,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "c0e8a9c5",
+   "id": "442f9f1a",
    "metadata": {},
    "outputs": [
     {
@@ -4517,7 +4515,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "760acf7e",
+   "id": "662dbff9",
    "metadata": {},
    "outputs": [
     {
@@ -4557,7 +4555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67325510",
+   "id": "8a937985",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4565,7 +4563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1e62c5b",
+   "id": "d34d466a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4573,7 +4571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b8d48c",
+   "id": "9d8ee1c2",
    "metadata": {},
    "outputs": [],
    "source": []
